# SystemyWbudowane

./: README.md
Alarm/: main.ino
Arduino/ArduinoPloter/: README.md  SchematBlokowy.odg  SprawozdanieAdamczykJaseniuk.odt
Arduino/ArduinoPloter/G-CodeParserPC/SourceTrail/: Ploter.srctrlprj
Arduino/ArduinoPloter/G-CodeParserPC/source/: CMakeLists.txt  GCode.h  SerialPort.h  main.cpp
Arduino/ArduinoPloter/PloterArduino/: Interpolacja.h  Program.cpp  Program.h  Ramie.h
ArduinoPloter/G-CodeParserPC/: CMakeLists.txt
ArduinoPloter/G-CodeParserPC/SourceTrail/: Ploter.srctrldb
ArduinoPloter/G-CodeParserPC/source/: Arduino.cpp  Arduino.h  GCode.cpp  gcode_program.h
ArduinoPloter/PloterArduino/: Ploter.ino  SerialPC.cpp  SerialPC.h
Liczby8Bitowe/: main.ino
Raspberry/Winda/: SchematBlokowy.odg  SchematPolaczen.fzz  SprawozdanieRaspberryAdamczykJaseniuk.odt
SumowanieLiczb/: main.ino
